# py-fp-playground

./: README.md  pyproject.toml
py_fp_playground/: catch.py  either.py  option.py  scalambda.py  temp.py  temp10.py  temp11.py  temp2.py  temp3.py  temp4.py  temp5.py  temp6.py  temp7.py  temp8.py  temp9.py  try_.py
py_fp_playground/ext_zio/: either.py  monadic.py  monadic_old.py
